Added extra images, changed page content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Chris York's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Chris York</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -52,8 +52,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<h2>Welcome to my Portfolio</h2>
+								<p>Years of Experience, it's true.</p>
 							</header>
 						</section>
 
@@ -64,7 +64,7 @@
 									<section class="first">
 										<i class="icon featured fa-cog"></i>
 										<header>
-											<h2>Ipsum consequat</h2>
+											<h2>I make a lot of things on the internet</h2>
 										</header>
 										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
 									</section>
@@ -73,7 +73,7 @@
 									<section class="middle">
 										<i class="icon featured alt fa-flash"></i>
 										<header>
-											<h2>Magna etiam dolor</h2>
+											<h2>Including cool boxes</h2>
 										</header>
 										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
 									</section>
@@ -82,7 +82,7 @@
 									<section class="last">
 										<i class="icon featured alt2 fa-star"></i>
 										<header>
-											<h2>Tempus adipiscing</h2>
+											<h2>Here's one with a star</h2>
 										</header>
 										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
 									</section>
@@ -90,8 +90,8 @@
 							</div>
 							<footer>
 								<ul class="actions">
-									<li><a href="#" class="button large">Get Started</a></li>
-									<li><a href="#" class="button alt large">Learn More</a></li>
+									<li><a href="#" class="button large">Click Me</a></li>
+									<li><a href="#" class="button alt large">Me Too</a></li>
 								</ul>
 							</footer>
 						</section>
@@ -112,11 +112,11 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example1.png" alt="" /></a>
 													<header>
-														<h3>Ipsum feugiat et dolor</h3>
+														<h3>Here's a website</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>First project, css styling pre-flexbox</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -126,11 +126,11 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example2.png" alt="" /></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>Another One</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Second project, same design but using flexbox and an added page.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -140,11 +140,11 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example3.png" alt="" /></a>
 													<header>
-														<h3>Consequat et tempus</h3>
+														<h3>..and Another</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Third project, designed with speed and precision. Flexbox is pretty cool.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -154,11 +154,11 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example4.png" alt="" /></a>
 													<header>
-														<h3>Blandit sed adipiscing</h3>
+														<h3>One More</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Fourth project, using media queries and meta expansion. Used both a desktop first and mobile first approach over two iterations.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -168,25 +168,25 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<a href="https://github.com/christopherayork" class="image featured"><img src="images/example5.png" alt="" /></a>
 													<header>
-														<h3>Etiam nisl consequat</h3>
+														<h3>My GitHub</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>My GitHub page which includes all aforementioned projects.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="https://github.com/christopherayork" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example6.jpg" alt="" /></a>
 													<header>
-														<h3>Dolore nisl feugiat</h3>
+														<h3>Programmer first by hobby</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Self taught at first, made into a pro by mentors.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -208,32 +208,32 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/blog1.jpg" alt="" /></a>
 													<header>
-														<h3>Magna tempus consequat</h3>
+														<h3>Learn Web Development</h3>
 														<p>Posted 45 minutes ago</p>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>Lambda School is a 9 month, immersive program that gives you the tools and training you need to launch your new career—from the comfort of your own home.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
+															<li><a href="https://lambdaschool.com" class="button icon fa-file-text">Continue Reading</a></li>
+															<li><a href="#" class="button alt icon fa-comment">36 comments</a></li>
 														</ul>
 													</footer>
 												</section>
 											</div>
 											<div class="col-6 col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/blog2.jpg" alt="" /></a>
 													<header>
-														<h3>Aptent veroeros aliquam</h3>
+														<h3>CSS3</h3>
 														<p>Posted 45 minutes ago</p>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>Learn the best way to create websites using up to date standards.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
+															<li><a href="https://www.w3schools.com/css/" class="button icon fa-file-text">Continue Reading</a></li>
+															<li><a href="#" class="button alt icon fa-comment">53 comments</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -257,27 +257,27 @@
 									</header>
 									<ul class="dates">
 										<li>
-											<span class="date">Jan <strong>27</strong></span>
+											<span class="date">June <strong>2</strong></span>
 											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
 											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>23</strong></span>
+											<span class="date">May <strong>23</strong></span>
 											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
 											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>15</strong></span>
+											<span class="date">May <strong>15</strong></span>
 											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
 											<p>Dolore consequat sed phasellus lorem sed etiam nullam dolor etiam sed amet sit consequat.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>12</strong></span>
+											<span class="date">May <strong>12</strong></span>
 											<h3><a href="#">Dolore tempus ipsum feugiat nulla</a></h3>
 											<p>Feugiat lorem dolor sed nullam tempus lorem ipsum dolor sit amet nullam consequat.</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>10</strong></span>
+											<span class="date">May <strong>10</strong></span>
 											<h3><a href="#">Blandit tempus aliquam?</a></h3>
 											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
 										</li>
@@ -297,7 +297,7 @@
 									</p>
 									<footer>
 										<ul class="actions">
-											<li><a href="#" class="button">Find out more</a></li>
+											<li><a href="https://html5up.net/dopetrope" class="button">Find out more</a></li>
 										</ul>
 									</footer>
 								</section>
