--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/example1.png" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/example7.png" alt="" /></a>
 													<header>
-														<h3>Here's a website</h3>
+														<h3>Todo App</h3>
 													</header>
-													<p>First project, css styling pre-flexbox</p>
+													<p>React Application for Todo list. Add Todos, Complete them, and remove them. Simple and easy.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
